force-app/main/default/objects/Codify_Change_Log__c/Codify_Change_Log__c.object-meta.xml
<CustomObject>
    <description
  >The audit backbone. One record per action Codify takes (Case field update, root cause tag, article draft created, related case flagged, escalation raised). Not optional: the goal is that nothing the agent does is invisible to service ops.</description>
    <label>Codify Change Log</label>
    <nameField>
        <displayFormat>CCHG-{00000}</displayFormat>
        <label>Change Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Codify Change Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>