force-app/main/default/objects/Codify_Change_Log__c/fields/Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Type__c</fullName>
    <label>Change Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Resolution Logged</fullName><default
        >false</default><label>Resolution Logged</label></value>
            <value><fullName>Case Field Update</fullName><default
        >false</default><label>Case Field Update</label></value>
            <value><fullName>Root Cause Tagged</fullName><default
        >false</default><label>Root Cause Tagged</label></value>
            <value><fullName>Article Drafted</fullName><default
        >false</default><label>Article Drafted</label></value>
            <value><fullName>Related Case Flagged</fullName><default
        >false</default><label>Related Case Flagged</label></value>
            <value><fullName>Escalated for Review</fullName><default
        >false</default><label>Escalated for Review</label></value>
        </valueSetDefinition>
    </valueSet>
    <description>What kind of action produced this audit row.</description>
</CustomField>