force-app/main/default/objects/Codify_Change_Log__c/fields/Created_By_Technician__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Technician__c</fullName>
    <label>Created By Technician</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Codify_Change_Logs</relationshipName>
    <relationshipLabel>Codify Change Logs</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Whose session produced this change.</description>
</CustomField>