force-app/main/default/objects/Codify_Change_Log__c/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <label>Field Name</label>
    <type>Text</type>
    <length>80</length>
    <description
  >Populated only for field-update rows: which field changed.</description>
</CustomField>