force-app/main/default/objects/Codify_Change_Log__c/fields/New_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Value__c</fullName>
    <label>New Value</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description
  >Populated only for field-update rows: the value Codify wrote.</description>
</CustomField>