force-app/main/default/objects/Codify_Change_Log__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <label>Object API Name</label>
    <type>Text</type>
    <length>80</length>
    <description>API name of the object the change landed on.</description>
</CustomField>