force-app/main/default/objects/Codify_Change_Log__c/fields/Old_Value__c.field-meta.xml
<CustomField>
    <fullName>Old_Value__c</fullName>
    <label>Old Value</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description
  >Populated only for field-update rows: the value before Codify changed it.</description>
</CustomField>