force-app/main/default/objects/Codify_Change_Log__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <label>Related Record Id</label>
    <type>Text</type>
    <length>18</length>
    <description
  >Id of the record Codify touched. Text rather than a lookup because the audit trail spans Case, Knowledge, Task and the resolution log itself.</description>
</CustomField>