force-app/main/default/objects/Codify_Change_Log__c/fields/Related_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Name__c</fullName>
    <label>Related Record Name</label>
    <type>Text</type>
    <length>255</length>
    <description
  >Human-readable name of the touched record, captured at write time so the audit row stays readable even if the record is renamed.</description>
</CustomField>