force-app/main/default/objects/Codify_Change_Log__c/fields/Requires_Human_Review__c.field-meta.xml
<CustomField>
    <fullName>Requires_Human_Review__c</fullName>
    <label>Requires Human Review</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description
  >True for anything that must not go live without a person approving it, above all Knowledge drafts. Case field updates are internal record-keeping and land false.</description>
</CustomField>