force-app/main/default/objects/Codify_Change_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Change_Type__c</columns>
    <columns>Object_API_Name__c</columns>
    <columns>Related_Record_Name__c</columns>
    <columns>Created_By_Technician__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>