force-app/main/default/objects/Codify_Change_Log__c/listViews/Awaiting_Human_Review.listView-meta.xml
<ListView>
    <fullName>Awaiting_Human_Review</fullName>
    <columns>NAME</columns>
    <columns>Change_Type__c</columns>
    <columns>Related_Record_Name__c</columns>
    <columns>Source_Resolution_Log__c</columns>
    <columns>Created_By_Technician__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Requires_Human_Review__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Awaiting Human Review</label>
</ListView>